# niconicotagger

./: .dockerignore  .editorconfig  .eslintrc.js  .gitattributes  .gitignore  .travis.yml  Cargo.toml  Dockerfile  package.json  tsconfig.json  vue.config.js
backend/: Cargo.toml  Dockerfile  pom.xml
backend/checkers-configuration/: detekt-configuration.yml  pmd.xml  spotbugs-excludes.xml
backend/src/: main.rs
backend/src/client/: client.rs  errors.rs  http_client.rs  jputils.rs  mod.rs  nicomodels.rs
backend/src/client/models/: activity.rs  archived.rs  artist.rs  discussion.rs  entrythumb.rs  language.rs  misc.rs  pv.rs  query.rs  releaseevent.rs  song.rs  status.rs  tag.rs  user.rs
backend/src/main/kotlin/niconicotagger/: Application.kt
backend/src/main/kotlin/niconicotagger/client/: DbClient.kt  DbClientHolder.kt  NicologClient.kt  NndClient.kt  Utils.kt  VocaDbClient.kt
backend/src/main/kotlin/niconicotagger/configuration/: AppConfiguration.kt  DbApiProps.kt  DbTagProps.kt  NndApiProps.kt  NndClientConfiguration.kt  ObjectMapperConfiguration.kt  PublisherLinkConfig.kt
backend/src/main/kotlin/niconicotagger/constants/: Constants.kt
backend/src/main/kotlin/niconicotagger/controller/: AggregatingController.kt  AuthorizationController.kt  ExceptionHandling.kt  UpdatingController.kt
backend/src/main/kotlin/niconicotagger/dto/: DbLoginException.kt  VocaDbLoginException.kt
backend/src/main/kotlin/niconicotagger/mapper/: NndVideoWithAssociatedVocaDbEntryMapper.kt  QueryResponseMapper.kt  ReleaseEventMapper.kt  RequestMapper.kt  SongWithPvsMapper.kt  Utils.kt
backend/src/main/kotlin/niconicotagger/serde/: ArtistRoleStringDeserializer.kt  DurationFromSecondsDeserializer.kt  DurationToTimeStringSerializer.kt  InstantToLocalDateSerializer.kt  LocalDateToInstantDeserializer.kt  NndScopeNormalizingDeserializer.kt  NndTagDeserializer.kt  NndTagStringDeserializer.kt  StringNormalizingDeserializer.kt  StringUnifyingDeserializer.kt  TimeStringFromSecondsDeserializer.kt  TrimmingStringDeserializer.kt  UnescapingStringDeserializer.kt  Utils.kt  VocaDbTagDeserializer.kt  VocaDbTagMappingsNormalizingDeserializer.kt
backend/src/main/kotlin/niconicotagger/service/: AggregatingService.kt  PublisherInfoService.kt  UpdatingService.kt
backend/src/main/resources/: application.yaml
backend/src/test/kotlin/: AbstractApplicationContextTest.kt  Utils.kt
backend/src/test/kotlin/niconicotagger/: AbstractApplicationContextTest.kt  Utils.kt
backend/src/test/kotlin/niconicotagger/client/: ClientHolderTest.kt  DbClientTest.kt  JsonFilterTest.kt  NicologClientTest.kt  NndClientTest.kt  VocaDbClientTest.kt
backend/src/test/kotlin/niconicotagger/configuration/: NndApiPropsTest.kt
backend/src/test/kotlin/niconicotagger/controller/: AbstractControllerTest.kt  AggregatingControllerTest.kt  AuthorizationControllerTest.kt  UpdatingControllerTest.kt
backend/src/test/kotlin/niconicotagger/datagen/: CustomServiceProvider.kt
backend/src/test/resources/: instancio.properties
backend/src/web/: controller.rs  dto.rs  errors.rs  middleware.rs  mod.rs
(+356 files in other folders)
