[package]
name = "niconicotagger"
version = "0.1.0"
authors = ["ktbr"]
edition = "2018"

[[bin]]
name = "niconicotagger"
path = "src/main/rust/main.rs"

[dependencies]
futures = "0.3"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }

log = "0.4"
env_logger = "0.8"

strum = "0.20"
strum_macros = "0.20"
derive_more = { version = "0.99" }

actix-web = { version = "3", features = ["rustls"] }
actix-web-httpauth = "0.5"
jsonwebtoken = "7.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
typetag = "0.1"

unicode-jp = "0.4"
