[package]
name = "niconicotagger"
version = "0.1.0"
authors = ["ktbr"]
edition = "2021"

[[bin]]
name = "niconicotagger"
path = "src/main/rust/main.rs"

[dependencies]
thiserror = "1"
anyhow = "1"

futures = "0.3"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }

log = "0.4"
env_logger = "0.8"

strum = "0.20"
strum_macros = "0.20"

base64 = "0.13"
aes = "0.7"
block-modes = "0.8.1"
hex-literal = "0.3.4"

actix-web = { version = "4.0.0-beta.21", features = ["rustls"] }
awc = { version = "3.0.0-beta.20", features = ["rustls"] }
actix-web-httpauth = "0.6.0-beta.7"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
roxmltree = "0.14"
serde_urlencoded = "0.7"
typetag = "0.1"

unicode-jp = "0.4"
