[package]
name = "niconicotagger"
version = "0.1.0"
authors = ["ktbr"]
edition = "2021"

[[bin]]
name = "niconicotagger"
path = "src/main/rust/main.rs"

[dependencies]
thiserror = "1"
anyhow = "1"

futures = "0.3"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }

log = "0.4"
env_logger = "0.9"

strum = "0.24"
strum_macros = "0.24"

base64 = "0.13"
aes = "0.7"
block-modes = "0.8"
hex-literal = "0.3"

actix-web = { version = "4", features = ["rustls"] }
awc = { version = "3", features = ["rustls"] }
actix-web-httpauth = "0.6"
scraper = "0.12.0"
url = "2"
url-escape = "0.1"
html-escape = "0.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-aux = "3.0"
roxmltree = "0.14"
serde_urlencoded = "0.7"
typetag = "0.1"

itertools = "0.9.0"

unicode-jp = "0.4"
